--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Gradle Cache
+      uses: burrunan/gradle-cache-action@v1
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
