--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,17 +10,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Gradle Cache
-      uses: burrunan/gradle-cache-action@v1
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
       
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.3.0
@@ -33,9 +22,12 @@ jobs:
       
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.3.0
+
       
-    - name: Build with Gradle
-      run: ./gradlew android/app/build
+    - name: Gradle Build Action
+      uses: gradle/gradle-build-action@v2.2.0
+      with:
+        build-root-directory: android
       
     - name: Show build
       run: ls android/app/build/outputs/apk
