--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,16 +18,18 @@ jobs:
       run: npm ci && npm install -g @ionic/cli native-run cordova-res
 
     - name: Ionic build
-      run: ionic build
-      
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.3.0
+      run: ionic build && ionic cap sync
 
       
-    - name: Gradle Build Action
-      uses: gradle/gradle-build-action@v2.2.0
+    - name: Set up JDK 8
+      uses: actions/setup-java@v3
       with:
-        build-root-directory: android
-      
+        java-version: '8'
+        distribution: 'temurin'
+        cache: 'gradle'
+    - name: Build with Gradle
+      run: cd android && ./gradlew build --no-daemon
+  
+    
     - name: Show build
-      run: ls android/app/build/outputs/apk
+      run: ls android/app/ && ls android/app/build
