--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: 'gradle'
     - name: Build with Gradle
-      run:  cd android && chmod +x ./gradlew && ./gradlew :app:assembleRelease --no-daemon
+      run:  cd android && chmod +x ./gradlew && ./gradlew build --no-daemon
   
     
     - name: Show build
