--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,7 +18,7 @@ jobs:
       run: npm ci && npm install -g @ionic/cli native-run cordova-res
 
     - name: Ionic build
-      run: ionic build && ionic cap sync
+      run: ionic cap sync
 
       
     - name: Set up JDK 8
